# RuffleCpp

./: CMakeLists.txt
cmake/: avm1.h  avm1_activation.h  avm1_automation_action_generator.h  avm1_button.h  avm1_callable_value.h  avm1_clamp.h  avm1_debug.h  avm1_error.h  avm1_flv.h  avm1_fscommand.h  avm1_function.h  avm1_globals.h  avm1_object.h  avm1_parameters.h  avm1_property.h  avm1_property_map.h  avm1_runtime.h  avm1_scope.h  avm1_script_object.h  avm1_stage_object.h  avm1_super_object.h  avm1_value.h  avm1_xml.h  avm2.h  avm_string.cpp  avm_string.h  avm_string_repr.h  backend.h  bitmap.h  bitmap_data.h  bitmap_display_object.h  bitmap_operations.h  bitmap_utils.h  build_playerglobal.cmake  build_playerglobal_cli.h  build_playerglobal_lib.cpp  build_playerglobal_lib.h  build_playerglobal_main.cpp  character.h  common_strings.h  (+23 more)
core/: CMakeLists.txt
core/src/: avm_rng.h  binary_data.h  lib.cpp  prelude.h
core/src/avm2/: string.h
core/src/avm2/globals/: __ruffle__.h  flash.h
desktop/: CMakeLists.txt
desktop/src/: backends.h  main_placeholder.cpp  version.h.in
desktop/src/gui/widgets/: mod.h
frontend-utils/src/: backends.h
plan/: SUMMARY.md
plan/translation/: README.md  master-plan.md
plan/translation/build-errors/: task.md
plan/translation/dummy-translation/core_build/: task.md
plan/translation/dummy-translation/core_build_playerglobal_src_cli/: task.md
plan/translation/dummy-translation/core_build_playerglobal_src_lib/: task.md
plan/translation/dummy-translation/core_build_playerglobal_src_main/: task.md
plan/translation/dummy-translation/core_common_src_avm_string/: task.md
plan/translation/dummy-translation/core_common_src_avm_string_avm_string/: task.md
plan/translation/dummy-translation/core_common_src_avm_string_common/: task.md
plan/translation/dummy-translation/core_common_src_avm_string_context/: task.md
plan/translation/dummy-translation/core_common_src_avm_string_interner/: task.md
plan/translation/dummy-translation/core_common_src_avm_string_repr/: task.md
plan/translation/dummy-translation/core_common_src_buffer/: task.md
plan/translation/dummy-translation/core_common_src_lib/: task.md
plan/translation/dummy-translation/core_common_src_sandbox/: task.md
plan/translation/dummy-translation/core_common_src_tag_utils/: task.md
plan/translation/dummy-translation/core_common_src_utils/: task.md
plan/translation/dummy-translation/core_common_src_xml/: task.md
plan/translation/dummy-translation/core_macros_src_lib/: task.md
plan/translation/dummy-translation/core_src_avm1/: task.md
plan/translation/dummy-translation/core_src_avm1_activation/: task.md
plan/translation/dummy-translation/core_src_avm1_callable_value/: task.md
plan/translation/dummy-translation/core_src_avm1_clamp/: task.md
plan/translation/dummy-translation/core_src_avm1_debug/: task.md
plan/translation/dummy-translation/core_src_avm1_error/: task.md
plan/translation/dummy-translation/core_src_avm1_flv/: task.md
plan/translation/dummy-translation/core_src_avm1_fscommand/: task.md
plan/translation/dummy-translation/core_src_avm1_function/: task.md
plan/translation/dummy-translation/core_src_avm1_globals/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_accessibility/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_array/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_as_broadcaster/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_asnative/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_automation_action_generator/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_automation_configuration/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_automation_stage_capture/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_bevel_filter/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_bitmap_data/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_bitmap_filter/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_blur_filter/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_boolean/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_button/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_camera/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_color/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_color_matrix_filter/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_color_transform/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_context_menu/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_context_menu_item/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_convolution_filter/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_date/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_displacement_map_filter/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_drop_shadow_filter/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_error/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_external_interface/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_file_reference/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_file_reference_list/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_function/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_glow_filter/: task.md
plan/translation/dummy-translation/core_src_avm1_globals_gradient_filter/: task.md
plan/translation/dummy-translation/core_src_avm1_object/: task.md
plan/translation/executables/: task.md
plan/translation/non-rust-files/: task.md
render/src/: shader_source.h
swf/src/: avm1.h  avm2.h
tests/framework/src/: backends.h
video/software/src/: lib.h
video/src/: frame.h
web/: CMakeLists.txt
web/src/: lib_placeholder.cpp  util_placeholder.cpp
(+636 files in other folders)
